test/trivial/lydia/octalBad.chpl
// This tests an intended octal number that is not in octal.
var foo = 0o87;
writeln(foo);
